styles/globals.scss
html,
body {
  padding: 0;
  margin: 0;
  font: 400 16px 'Inter', sans-serif;
  background-color: var(--bg);
  color: var(--primary);
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

:root {
  --primary: #E1E1E6;
  --bg: #121214;
  --contrast: #8257E6;

}

@media (max-width: 600px) {
  body {
    overflow-x: hidden;
  }
}

